fixed rounding to overflow project index. removed --project-height and use aspect ratio instead

--- a/src/css/home.css
+++ b/src/css/home.css
@@ -31,7 +31,7 @@
 }
 
 #home>section {
-    scroll-snap-align: center;
+    scroll-snap-align: start;
     padding-top: 40px;
 }
 
